# crawlbot2

./: .gitignore  Cargo.toml  Dockerfile  README.md  asyncapi.yaml  build.sh  flow.mmd
src/: commands.rs  logger.rs  main.rs  map.rs  protocol.rs
test/client/: client.excalidraw  index.js  map.js  package-lock.json  package.json  test.js
test/client/src/: commands.js  commands.ts  index.js  index.ts  map.js  map.ts  test.js  test.ts
test/client/src/types/: jsonstream.d.ts
test/container/: run.sh
test/research/: glyphs.md  package-lock.json  package.json  schema.js  test.json  test2.json
test/research/login/: 00-login.json  01-version.json  04-options.json  05-layout.json  06-ui_state.json  07-player.json  08-msgs.json  09-map.json  10-cursor.json  11-input_mode.json  12-msgs.json  13-map.json
test/research/move/: 00-move.json  01-msgs.json
