[package]
name = "crawlbot2"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26.1", features = ["rustls-tls-native-roots"] }
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustyline-async = "0.4.4"
url = "2.5"
futures-util = "0.3"
chrono = "0.4"
tokio-stream = { version = "0.1.18", features = ["sync"] }
